fix: body overflow

--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,6 @@
 
 body {
   background-color: var(--dark-blue);
-  padding: 40px;
 }
 
 /* header and nav*/
@@ -28,18 +27,14 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 80px;
   overflow: hidden;
+  padding: 40px;
 }
 
 nav ul {
   display: flex;
   gap: 2rem;
   margin-right: .5rem;
-}
-
- ul li {
-  transition: 1s ease;
 }
 
  ul li a {
@@ -51,9 +46,9 @@ nav ul {
  ul li a:before {
   opacity: 0;
   transition: 1s ease;
+  position: absolute;
   top: calc(50% - 1px);
   transform: translateY(-50%);
-  position: absolute;
 }
 
  ul li a:after {
@@ -101,7 +96,8 @@ transition: .5s ease;
 z-index: 99px;
 background-color: var(--dark-blue);
 position: absolute;
-width: 90vw;
+width: 100%;
+padding-inline: 40px;
 }
 
 #mobile-menu.on{ 
@@ -114,6 +110,14 @@ width: 90vw;
 }
 /* mobile menu */
 
+#hero{ 
+  margin-top: 5rem;
+}
+
+
+
+
+/* media querie */
 @media(max-width:540px){
   nav{
     display: none;
@@ -123,3 +127,4 @@ width: 90vw;
     display: block;
   }
 }
+/* media querie */
